--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="screen_setting_app_debug_subtitle">A place to test some code</string>
     <string name="screen_image_topbar_title">Browse images</string>
     <string name="screen_image_tab_text">Image</string>
-    <string name="screen_search_bar_placeholder">Search for videos and pictures</string>
+    <string name="screen_search_bar_placeholder">Search Iwara</string>
     <string name="screen_search_bar_empty">Can\'t search empty content!</string>
     <string name="screen_self_topbar_title">Edit profile</string>
     <string name="screen_splash_animated_text">Checking login status…</string>
